test/spec_vectors/align64/ok/module_9.wat
(module (memory i64 0) (func (drop (i64.load32_s align=4 (i64.const 0)))))