test/spec_vectors/align64/fail/module_77.wat
(module (memory i64 0) (func (drop (i64.load16_u align=4 (i64.const 0)))))